# $Id: Changes,v 1.50 2003/08/12 05:26:03 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.58
	[FIXES]
	* The <AREA>-handling in extract_links() was incorrectly
	  building the text.

	[INTERNALS]
	* Determination of live vs. local tests is now done in
	  Makefile.PL, and we don't have to set those silly semaphore
	  files any more.
	* Made other cleanups in Makefile.PL, like using
	  ExtUtils::Command instead of rolling my own touch().
	* Moved all the *-live.t tests into t/live/*.t, and renamed
	  the *-local.t files to not be -local.
	* Added more tests for <AREA> tags.

0.57	July 31, 2003  11:21pm
	[ENHANCEMENTS]
	* Added <AREA HREF=...> tags to those that are links per
	  find_links().

0.56    July 24, 2003  12:15pm
	[THINGS THAT MIGHT BREAK YOUR CODE]
	* Created agent_alias() method to do the browser string
	  translation.	Passing "Windows IE 6" to agent() will get
	  you back exactly that string as the agent.  You have to call
	  $a->agent_alias( "Windows IE 6" ) to get the translation.

	  Fortunately, unless you used the new functionality of agent() in
	  the past two days since I released 0.55, it won't be a problem.

	[ENHANCEMENTS]
	* Removed the dependencies on Carp and Test::Builder.  There still
	  is a dependency on Test::Builder for Test::More, but it's no
	  longer explicit in the Makefile.PL.  Mech will use Carp if
	  possible, but it's no longer a requirement.

	[INTERNALS]
	* Added _carp method for handling conditional warnings, rather
	  than checking quiet() all the time.

0.55	July 22, 2003  12:10pm
	[ENHANCEMENTS]
	* Added WWW::Mechanize::Link object to encapsulate what used to
	  be an array reference of stuff from find_link().  This replaces
	  having to know that $link->[0] was URL and so on.  However,
	  since WWW::Mechanize::Link is a blessed arrayref, it's backwards
	  compatible with existing code.

	* The WWW::Mechanize::Link object now tracks what tag the link
	  came from (<A>, <FRAME> or <IFRAME>).
