@@ -11,7 +11,7 @@ FIRST_GET: {
     my $r = $agent->get("http://www.google.com/intl/en/");
     isa_ok( $r, "HTTP::Response" );
     ok( $r->is_success, "Get google webpage");
-    isa_ok($agent->uri, "URI", "Set uri");
+    is( ref $agent->uri, "", "URI should be string, not an object" );
     ok( $agent->is_html );
     is( $agent->title, "Google" );
 }
